; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varchar.c_varchar_input.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varchar.c_varchar_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VARHDRSZ = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_STRING_DATA_RIGHT_TRUNCATION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"value too long for type character varying(%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i64, i64)* @varchar_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @varchar_input(i8* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* @VARHDRSZ, align 8
  %13 = sub nsw i64 %11, %12
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* @VARHDRSZ, align 8
  %16 = icmp sge i64 %14, %15
  br i1 %16, label %17, label %52

17:                                               ; preds = %3
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* %8, align 8
  %20 = icmp ugt i64 %18, %19
  br i1 %20, label %21, label %52

21:                                               ; preds = %17
  %22 = load i8*, i8** %4, align 8
  %23 = load i64, i64* %5, align 8
  %24 = load i64, i64* %8, align 8
  %25 = call i64 @pg_mbcharcliplen(i8* %22, i64 %23, i64 %24)
  store i64 %25, i64* %9, align 8
  %26 = load i64, i64* %9, align 8
  store i64 %26, i64* %10, align 8
  br label %27

27:                                               ; preds = %47, %21
  %28 = load i64, i64* %10, align 8
  %29 = load i64, i64* %5, align 8
  %30 = icmp ult i64 %28, %29
  br i1 %30, label %31, label %50

31:                                               ; preds = %27
  %32 = load i8*, i8** %4, align 8
  %33 = load i64, i64* %10, align 8
  %34 = getelementptr inbounds i8, i8* %32, i64 %33
  %35 = load i8, i8* %34, align 1
  %36 = sext i8 %35 to i32
  %37 = icmp ne i32 %36, 32
  br i1 %37, label %38, label %46

38:                                               ; preds = %31
  %39 = load i32, i32* @ERROR, align 4
  %40 = load i32, i32* @ERRCODE_STRING_DATA_RIGHT_TRUNCATION, align 4
  %41 = call i32 @errcode(i32 %40)
  %42 = load i64, i64* %8, align 8
  %43 = trunc i64 %42 to i32
  %44 = call i32 @errmsg(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %43)
  %45 = call i32 @ereport(i32 %39, i32 %44)
  br label %46

46:                                               ; preds = %38, %31
  br label %47

47:                                               ; preds = %46
  %48 = load i64, i64* %10, align 8
  %49 = add i64 %48, 1
  store i64 %49, i64* %10, align 8
  br label %27

50:                                               ; preds = %27
  %51 = load i64, i64* %9, align 8
  store i64 %51, i64* %5, align 8
  br label %52

52:                                               ; preds = %50, %17, %3
  %53 = load i8*, i8** %4, align 8
  %54 = load i64, i64* %5, align 8
  %55 = call i64 @cstring_to_text_with_len(i8* %53, i64 %54)
  %56 = inttoptr i64 %55 to i32*
  store i32* %56, i32** %7, align 8
  %57 = load i32*, i32** %7, align 8
  ret i32* %57
}

declare dso_local i64 @pg_mbcharcliplen(i8*, i64, i64) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i64 @cstring_to_text_with_len(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
